test/parallel/forall/zip/zipRangeMismatch.good
zipRangeMismatch.chpl:3: error: halt reached - size mismatch in zippered iteration
